styling employee confirm buttons, whitespace issues

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,3 +26,7 @@
 .custom-nav{
     margin-top: 75px;
 }
+
+.btn-employee-home {
+  white-space:normal !important;
+}
